--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -2,7 +2,7 @@
     list-style: none;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: right;
     width: 100%;
     height: 40px;
     align-items: center;
@@ -13,4 +13,13 @@
 #nav ul a{
     color: #1b98e0;
     text-decoration: none;
+}
+
+#nav ul li{
+    padding-right: 40px;
+}
+
+#nav ul span{
+    position: absolute;
+    left: 30px;
 }
