--- a/src/pages/css/CreateAccount.css
+++ b/src/pages/css/CreateAccount.css
@@ -47,3 +47,14 @@
     cursor: pointer;
 
 }
+
+@media (max-width:1000px){
+
+    #box-create{
+        margin-top: 390px;
+        width: 300px;
+        height: 400px;
+    }
+    
+
+}
